--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,6 @@
 .banner{
     margin-top: 122px;
     justify-content: center;
-    align-items: center;
 }
 .banner-content{
     margin-right: 50px;
@@ -143,6 +142,14 @@
     .banner{
         flex-direction: column-reverse;
         text-align: center;
+    }
+    .banner-title{
+        font-size: 2rem;
+        white-space: nowrap;
+    }
+    .banner-description{
+        font-size: 0.9rem;
+        white-space: nowrap;
     }
     
 }
